style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
body{
	font-family: 'cabin', sans-serif;
	font-weight: 300;
		background-color:#DDECE9 ;

}
html{
	scroll-behavior: smooth;
}
.recone{
	position: absolute;
	display: block;
	width: 100%;
	background-image: url("img/rec.png");
	left:10px; 
	top:30px;
}
.fa{
	padding-right: 20px;
	font-size: 24px;
}
.navbar{
	font-weight: 300;
	padding: 2rem 3rem;
	background-color:#DDECE9 ;
}
.nav-item{

	padding-right: 20px;
}
.bg-light{
	background-color: #DDECE9!important;
}
.intro{
	display: flex;
	flex-direction: column;
background-color:#DDECE9 ;
	flex-wrap: wrap;
}



.intro h1{
	padding-top: 5%;
	padding-left: 10%;
	padding-right: 25%;
	padding-bottom: 2%;
	display: block;
	width: 100%;
	justify-content: safe left;
	text-align: left;
	font-weight: 400;
	font-size: 4.1vw;
	color: #23423C;

    
    
}
.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}
.intro h5{
	font-weight: 300;
	color:#393939;
	font-size: 20px;
	padding-left: 25%;
	padding-right: 25%;
	padding-bottom: 60px;
	display: block;
	width: 100%;
	line-height: 28px;
	justify-content: center;
	text-align: center;
}
.intro h6{
	padding-bottom: 10%;
	padding-left: 10%;
	width: 100%;
	justify-content: safe left;
	text-align: left;

	
}
.introimg img{

	max-height: 600px
	margin: 0 0 0 0;
	width: 100%;
height: auto;
padding-right: 10%;
	opacity: 1;
}
.intro a{
		text-decoration: underline;
	color: #000000 !important;
	font-size: 1.6vw;
	background-color: #82F7D0;
}

.mycontainer{
margin: auto;
padding: 10%;
padding-top: 5%;
background-color:#DDECE9 ;
}

.Projecthead_container{
margin: auto;
padding: 2% 10% 4% 10%;
background-color:#DDECE9 ;
color: #23423C;
}

.Projecthead_container h2{

}
.portfolios{
width: 100%;
display: block;
}
.project-cover{
width: 100%;
    margin-top: 15px;
    margin-bottom: 15px;
}
.boxstyle{


	margin-bottom: 30px;
}
.details-wrap{
	  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  margin-left: 14px;
  margin-right: 14px;
  
  opacity: 0;
  transition: .5s ease;
background: linear-gradient(
        45deg,
        rgba(29, 236, 197, 1),
        rgba(91, 14, 214, 1) 100%
      );
}


.project-cover:hover .details-wrap{
	opacity: 1;
}
.details-inner {
  color: white;
  font-size: 1.7vw;
  position: absolute;
  top: 50%;
  left: 40%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: left;

}

.title{
	font-size: 2vw;
}

.head{
	width:600px;
	justify-content: center;
}
.anim-typewriter{
  animation: typewriter 4s steps(44) 1s 1 normal both,
             blinkTextCursor 500ms steps(44) infinite normal;
}
.active{
	font-weight: 400;
}
.images img{
	flex-wrap: wrap;
	display: block;
	width: 100%;
	height: auto;
	padding:20px;
}
.content {
	
	display: block;
	width:100%;
}
.content p{
	font-family: 'cabin', sans-serif;
	font-weight: 200;
}
.content h5{
	padding-top: 2%;
	font-weight: 600;
	font-size: 1.7vw;
}
.footer {
position: absolute;
bottom: 0;
width: 100%;
height: 60px;
line-height: 60px;
background-color: #f5f5f5;
}
.summary_section{
	width: 100%;
	margin: 0 0 0 0;
	

}
.section_message{
	width: 100%;
	margin: 0 0 0 0;
}
.myfooter{
	width: 100%;
	margin: 0 0 0 0;
}

.summary_content{
	text-align: left;
	justify-content: center;
	font-size: 2vw;
	background-color: #222027;
	color: #DDECE9;
	padding: 5% 10% 5% 10% ;
}
.summary_text{

	font-size: 2vw;
}
.message_content{
	text-align: left;
	justify-content: center;
	font-size: 2.5vw;
	background-color: #23423C;
	color: #82F7D0;
	padding: 5% 30% 5% 10% ;
	font-weight: 400;


}

.footer_content{
	text-align: left;
	justify-content: center;
	font-size: 1.8vw;
	background-color: #222027;
	color: #DDECE9;
	padding: 5% 10% 5% 10% ;
}
.summary_content img{
	max-width: 60%;
	justify-content: center;
}

.section_heading{
color: #23423C;
padding-bottom: 2%;
font-size: 1.5vw;
font-weight: 100;
}
.clickable{
	padding-top: 3%;
	padding-bottom: 10%;
}

.clickable a{

	text-decoration: underline;
	color: #000000 !important;
	font-size: 20px;
	background-color: #82F7D0;
}

@keyframes typewriter{
  from{width: 0;}
  to{width: 24em;}
}
@keyframes blinkTextCursor{
  from{border-right-color: rgba(255,255,255,.75);}
  to{border-right-color: transparent;}
}


@media only screen and (max-width: 988px) {

	.intro h1{
		font-size: 6vw;
    padding: 10%;
    padding-top: 3%;
    padding-bottom: 3%;

	}

	.introimg img{
		opacity: 0;
    display: none;
	}
.intro a{
font-size: 2vw;
	}
	.summary_text{

	font-size: 2.5vw;
}
.details-inner {

  font-size: 2.4vw;
	}
}
.funky {

font-weight: 600;

}


@media only screen and (max-width: 600px) {
	.intro h1{
		font-size: 9vw;
    padding: 10%;
    padding-top: 6%;
    padding-bottom: 6%;

	}
	.introimg img{
		opacity: 0;
    display: none;

	}
	.summary_text{
	margin-top: 20px;
	font-size: 6vw;
}
.message_content{
	font-size: 6vw;
	padding: 5% 10% 5% 10% ;
	align-content: center;
	text-align: center;
}
	.intro a{font-size: 4vw;
}
.section_heading{
	font-size: 5vw;
	justify-content: center;
	text-align: center;
	padding-bottom: 20px;
}
.details-inner {

  font-size: 3vw;
	}

}

